fixed alignment when state is shrunk

--- a/static/css/components/control-panel/base.css
+++ b/static/css/components/control-panel/base.css
@@ -24,6 +24,6 @@ div#control-panel.shrink {
     bottom: 30vh;
     height: 30vh;
     margin: 0 40%;
-    padding: 0 6%;
+    padding: 0;
 }
 
